[package]
name = "human-readable"
version = "0.0.1" # https://crates.io/crates/human-readable
edition = "2021"
rust-version = "1.62"
publish = true
description = "Rust human readable"
repository = "https://github.com/gyuho/human-readable"
readme = "README.md"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
